in game.js i change function to make two digits on the end of Money, in main.css i try to make menu not on full screen but it need work

--- a/main.css
+++ b/main.css
@@ -17,11 +17,12 @@ body{
 #shop{
   background: rgb(65, 65, 65);
   font-size: 32px;
-  position: relative;
-  overflow: auto;
+  position: fixed;
+  /*overflow: auto;*/
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  width: 25%;
 }
 .counter{
     margin-left: auto;
