--- a/main.css
+++ b/main.css
@@ -11,6 +11,11 @@ body{
     color: white;
     font-family: 'Roboto', sans-serif;
 }
+h1 {
+  padding: 30px 0;
+  font: 1.5em 'Open Sans', sans-serif;
+  text-align: center;
+}
 #game{
     margin-left: auto;
     margin-right: auto;
@@ -119,3 +124,60 @@ body{
 @keyframes animateright{
     from{right:-300px;opacity:0} to{left:0;opacity:1}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+ul {
+  list-style: none;
+  max-width: 800px;
+  margin: 0 auto;
+}
+nav {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+ul a {
+  display: block;
+  padding: 20px;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  color: #fafafa;
+  text-decoration: none;
+  transition: 0.4s;
+}
+
+ul a:hover {
+  background: #eee;
+  color: #434343;
+}
+
+nav li {
+  float: left;
+  width: 33.33333333333333%;
+  border-right: 1px dashed #ffffff;
+  border-left: 1px dashed #ffffff;
+}
+
+ul > li
