--- a/main.css
+++ b/main.css
@@ -104,6 +104,7 @@ h1 {
     border: 2px solid rgba(255, 255, 255, 0.53);
     transition: 0.5s;
     border-radius: 4px;
+    padding: 0 0;
 }
 .buyBT:hover{
     background: rgba(255, 255, 255, 0.76);
